<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />

        <item
            android:id="@+id/nav_my_account"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/nav_account" />

        <item
            android:id="@+id/nav_my_purchase"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/nav_my_purchases" />

        <item
            android:id="@+id/nav_my_products"
            android:icon="@drawable/ic_my_products"
            android:title="@string/nav_my_books" />

        <item
            android:id="@+id/nav_add_product"
            android:icon="@drawable/ic_add"
            android:title="@string/nav_add_book" />

    </group>

    <item android:title="Help">
        <menu>

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_info_black_24dp"
                android:title="@string/nav_about_us" />

        </menu>

    </item>

    <item android:title="Authentication">

        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="Logout" />
        </menu>

    </item>

</menu>